css/styles.css
html {
    margin: 0px;
    box-sizing: border-box;
}

body {
    margin: 0px;
}

nav {
    position: relative;
    width: 100%;
    z-index: 10001;
    background-color: #fff;
}

.login__container,
.cart__container {
    position: relative;
    display: inline-block;
    left: 47%;
}

.login__container {
    padding-right: 5%;
}

.logout {
    display: none;
}

.modal__container {
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: 1001;
    background-color: rgba(0, 0, 0, 0.7);
    top: 0;
    display: none;
}

.modal {
    position: absolute;
    background: #fff;
    top: 50%;
    width: 100%;
    text-align: center;
}

.sign__in__form {
    padding-bottom: 20px;
}

.input__div {
    margin-bottom: 5px;
}

.form__label {
    padding-bottom: 5px;
}

.carousel__container {
    position: relative;
    z-index: 1;
}

.carousel__container,
.slide__container {
    height: 300px;
    width: 100%;
}

.slide__container {
    position: absolute;
    display: none;
}

.slide__container.initial{
    display: inline-block;
}

.image__container {
    height: 300px;
    width: 100%;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

.image__container.image1 {
    background: url("https://via.placeholder.com/365x300");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

.image__container.image2 {
    background: url("https://via.placeholder.com/365x300");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

.image__container.image3 {
    background: url("https://via.placeholder.com/365x300");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

.image__container.image4 {
    background: url("https://via.placeholder.com/365x300");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

.image__container.image5 {
    background: url("https://via.placeholder.com/365x300");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

.button__container {
    position: absolute;
    z-index: 1001;
    width: 114px;
    height: 100%;
    text-align: center;
    background-color: rgba(90, 90, 90, .1);
}

.button__container:hover {
    background-color: rgba(90, 90, 90, .3);
}

.button__container--left {
    right: 68%;
}

.button__container--right {
    left: 68%;
}

.button__arrow {
    position: relative;
    top: 50%;
    font-size: 30px;
}

main {
    padding-top: 5%
}

.catalog {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
}

.item__container {
    display: inline-block;
    width: 175px;
    height: 175px;
    padding-bottom: 5%;
    margin-bottom: 2%;
}

.item__name {
    position: relative;
    left: 2%;
    margin: 2px 0;
}

.item__price {
    display: inline-block;
    position: relative;
    left: 75%;
}

